force-app/main/default/objects/User/fields/Al_quota_Loca_o__c.field-meta.xml
<CustomField>
    <fullName>Al_quota_Loca_o__c</fullName>
    <label>Alíquota Locação</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>