force-app/main/default/objects/User/fields/Avalia_o_Liberada__c.field-meta.xml
<CustomField>
    <fullName>Avalia_o_Liberada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avaliação Liberada</label>
    <type>Checkbox</type>
</CustomField>