force-app/main/default/objects/User/fields/Classificacao_de_Servicos__c.field-meta.xml
<CustomField>
    <fullName>Classificacao_de_Servicos__c</fullName>
    <label>Classificação de Serviços</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESPECIALISTA</fullName>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>SP, RJ, MS e SUL</fullName>
            </value>
            <value>
                <fullName>NORTE</fullName>
            </value>
            <value>
                <fullName>GO e MT</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>