force-app/main/default/objects/User/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <formula>Contact.CPF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF</label>
    <type>Text</type>
</CustomField>