force-app/main/default/objects/User/fields/departamento_A__c.field-meta.xml
<CustomField>
    <fullName>departamento_A__c</fullName>
    <formula>Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>departamento_A</label>
    <type>Text</type>
</CustomField>