force-app/main/default/objects/User/fields/Departamento_Premiacao__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Premiacao__c</fullName>
    <label>Departamento Premiação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Governo</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
            <value>
                <fullName>Locação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>