force-app/main/default/objects/User/fields/E_gerente__c.field-meta.xml
<CustomField>
    <fullName>E_gerente__c</fullName>
    <formula>IF(
  OR(
    CONTAINS(Profile.Name, &quot;Gerente&quot;),
    Email = &quot;gabriel.coelho@hoscom.net&quot;,
    Email = &quot;administrativo@hospcom.net&quot;,
    Email = &quot;barbara.coelho@hospcom.net&quot;
  ),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É gerente</label>
    <type>Checkbox</type>
</CustomField>