force-app/main/default/objects/User/fields/e_gestor__c.field-meta.xml
<CustomField>
    <fullName>e_gestor__c</fullName>
    <formula>CONTAINS(Profile.Name, &apos;Gestor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>é gestor</label>
    <type>Checkbox</type>
</CustomField>