force-app/main/default/objects/User/fields/Gerencia_Pendencias__c.field-meta.xml
<CustomField>
    <fullName>Gerencia_Pendencias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gerencia Pendências</label>
    <type>Checkbox</type>
</CustomField>