force-app/main/default/objects/User/fields/gerente_Ou_Gestor__c.field-meta.xml
<CustomField>
    <fullName>gerente_Ou_Gestor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Esse usuário é gerente ou gestor de algum departamento ?</inlineHelpText>
    <label>É gerente/Gestor ?</label>
    <type>Checkbox</type>
</CustomField>