force-app/main/default/objects/User/fields/GrupoHospcom__c.field-meta.xml
<CustomField>
    <fullName>GrupoHospcom__c</fullName>
    <formula>Contact.GrupoHospcom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GrupoHospcom</label>
    <type>Checkbox</type>
</CustomField>