force-app/main/default/objects/User/fields/Hora_notificacao__c.field-meta.xml
<CustomField>
    <fullName>Hora_notificacao__c</fullName>
    <formula>IF(Contact.Admissao__c != null, DATETIMEVALUE(TEXT(Contact.Admissao__c) &amp; &quot; 08:00:00&quot;), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora notificação</label>
    <type>DateTime</type>
</CustomField>