force-app/main/default/objects/User/fields/Id_do_contato__c.field-meta.xml
<CustomField>
    <fullName>Id_do_contato__c</fullName>
    <formula>Contact.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id do contato</label>
    <type>Text</type>
</CustomField>