force-app/main/default/objects/User/fields/ID_do_usu_rio__c.field-meta.xml
<CustomField>
    <fullName>ID_do_usu_rio__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID do usuário</label>
    <type>Text</type>
</CustomField>