force-app/main/default/objects/User/fields/IdsCalendarios__c.field-meta.xml
<CustomField>
    <fullName>IdsCalendarios__c</fullName>
    <label>IdsCalendarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>