force-app/main/default/objects/User/fields/Ignorar_erros__c.field-meta.xml
<CustomField>
    <fullName>Ignorar_erros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignorar erros</label>
    <type>Checkbox</type>
</CustomField>