force-app/main/default/objects/User/fields/Meta_T1__c.field-meta.xml
<CustomField>
    <fullName>Meta_T1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meta T1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>