force-app/main/default/objects/User/fields/Pendencias_em_aberto__c.field-meta.xml
<CustomField>
    <fullName>Pendencias_em_aberto__c</fullName>
    <label>Pendências em aberto</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>