force-app/main/default/objects/User/fields/Peso_Premiacao__c.field-meta.xml
<CustomField>
    <fullName>Peso_Premiacao__c</fullName>
    <label>Peso Premiação</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>