force-app/main/default/objects/User/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <label>Região</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Região GO/TO</fullName>
            </value>
            <value>
                <fullName>Região Norte</fullName>
            </value>
            <value>
                <fullName>Região SP</fullName>
            </value>
            <value>
                <fullName>Região DF</fullName>
            </value>
            <value>
                <fullName>Região RJ/ES/Sul</fullName>
            </value>
            <value>
                <fullName>Região MT/MS</fullName>
            </value>
            <value>
                <fullName>Colômbia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>