force-app/main/default/objects/User/fields/revisor__c.field-meta.xml
<CustomField>
    <fullName>revisor__c</fullName>
    <label>Revisor</label>
    <relationshipName>Usu_rios1</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>