force-app/main/default/objects/User/fields/SalesPersonCode__c.field-meta.xml
<CustomField>
    <fullName>SalesPersonCode__c</fullName>
    <description>Este campo foi criado para utilizar na integração com o SAP</description>
    <label>SalesPersonCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>