force-app/main/default/objects/User/fields/Subdepartamento__c.field-meta.xml
<CustomField>
    <fullName>Subdepartamento__c</fullName>
    <label>Subdepartamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subdepartamento</valueSetName>
    </valueSet>
</CustomField>