force-app/main/default/objects/User/fields/supervisor__c.field-meta.xml
<CustomField>
    <fullName>supervisor__c</fullName>
    <formula>CONTAINS(Profile.Name, &apos;Supervisor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É supervisor</label>
    <type>Checkbox</type>
</CustomField>