force-app/main/default/objects/User/fields/URL_Foto__c.field-meta.xml
<CustomField>
    <fullName>URL_Foto__c</fullName>
    <label>URL Foto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>