force-app/main/default/objects/User/fields/Variacao__c.field-meta.xml
<CustomField>
    <fullName>Variacao__c</fullName>
    <label>Variação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Variacoes</valueSetName>
    </valueSet>
</CustomField>