force-app/main/default/objects/User/fields/Variacoes__c.field-meta.xml
<CustomField>
    <fullName>Variacoes__c</fullName>
    <label>Variações</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Variacoes</valueSetName>
    </valueSet>
</CustomField>