force-app/main/default/objects/User/listViews/X1_Usu_rios_Internos_Ativos.listView-meta.xml
<ListView>
    <fullName>X1_Usu_rios_Internos_Ativos</fullName>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>IS_FROZEN</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IS_FROZEN</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>1-Usuários Internos Ativos</label>
</ListView>