force-app/main/default/objects/User/listViews/X4_Usu_rios_Parceiros_Ativos.listView-meta.xml
<ListView>
    <fullName>X4_Usu_rios_Parceiros_Ativos</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Variacoes__c</columns>
    <columns>Variacao__c</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>Gestor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>P</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IS_FROZEN</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>4-Usuários Parceiros Ativos</label>
    <language>pt_BR</language>
</ListView>